* Dec 28 2000 hship

Include the config directory in the distribution, with a README.

* Dec 26 2000 hship

Change definition of JAVADOC_DIR to be the actual directory (i.e., no longer tack
on MODULE_NAME).

* Dec 22 2000 hship

Reorganize the JBE Utils, add the new splice command (used to automatically
edit configuration files).

* Dec 22 2000 hship

Reorganize to support multiple JDK releases and vendors.

* Dec 20 2000 hship

Always remove package.html from the list of package resources.

* Dec 19 2000 hship

More tweaking to get things just right.

* Dec 15 2000 hship

Lots of cleanups and improvements.  Simplified, reorganized and made things work
properly with GNU Make 3.79.

* Dec 11 2000 hship

More cleanups and improvements; support some additional user-define pre- and post-
targets.
Simplify the rules for compiling the JBE utility; extend it to support compiling
any additional Java files in the directory.

* Dec 11 2000 hship

Make use of the Make $(call) function to simplify/improve the makefiles.

* Nov 20 2000 hship

More changes to the JBE to support Solaris.  Solaris doesn't always use GNU tools, so we
need to use the short versions of many command line parameters.

* Nov 20 2000 hship

Release 0.2.6

* Nov 16 2000 hship

Don't use -n option with echo, since it isn't supported under Solaris.

* Nov 16 2000 hship

Minor change for Cygwin 1.0:  Force make not to print the directory on enter / exit.

* Nov 14 2000 hship

Begin adding support for jBoss.

* Nov 6 2000 hship

Create a default package makefile used when a package doesn't define its own Makefile.

* Oct 11 2000 hship

Add some comments to WebLogic.mk to make clear it is for WebLogic 5.1 and things will
change in WebLogic 6.0.
[114707] Seperate Platform from JDK

* Sep 28 2000 hship

Improve handling of dependencies of jar files:  make the WebLogic deplyable jar
dependent on the any framework jars; make installed jars dependent on Module jars (rather
than blindly copying them).
